[project]
name = "kjvstudy-org"
version = "0.1.0"
description = "Study the King James Bible with AI-powered commentary and insights"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "biblepy>=0.1.3",
    "fastapi[standard]>=0.115.12",
    "ged4py>=0.5.2",
    "jinja2>=3.1.6",
    "parse>=1.20.2",
    "pytest>=8.3.5",
    "python-gedcom>=1.0.0",
    "requests>=2.32.3",
    "uvicorn>=0.34.2",
]

[project.scripts]
kjvstudy-org = "kjvstudy_org.main:main"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["kjvstudy_org*"]

[tool.setuptools.package-data]
kjvstudy_org = ["static/*", "templates/*"]

[tool.uv]
package = true
